--- a/djangoAuthentication/templates/session.html
+++ b/djangoAuthentication/templates/session.html
@@ -13,6 +13,8 @@
       <br>
       Session Year <input type="number" name="session_year" value="{{sessionYear}}">
       <br>
+      Max Credit <input type="number" name="max_credit" value="{{maxCredit}}">
+      <br>
       session  <input type="text" name="session" value="{{session}}">
       <input type="submit" name="One" value="Search">
       <br>
