--- a/djangoAuthentication/templates/session.html
+++ b/djangoAuthentication/templates/session.html
@@ -18,6 +18,9 @@
       session  <input type="text" name="session" value="{{session}}">
       <input type="submit" name="One" value="Search">
       <br>
+      Start Date <input type="date" name="startdate">
+      <br>
+      Dead line <input type="date" name="deadline">
       <table>
         <tr>
           <th>Offered</th>
